--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-lottie-player": "^1.4.3"
   },
   "devDependencies": {
+    "autoprefixer": "^10.4.13",
     "eslint": "8.17.0",
     "eslint-config-next": "12.1.6",
     "tailwindcss": "^3.0.24"
